ft_containers-unit-test/logs.txt
../vector_tests/begin().cpp:21:17: error: indirection requires pointer operand ('int' invalid)
    v.push_back(*++vector.begin());
                ^~~~~~~~~~~~~~~~~
../vector_tests/begin().cpp:28:59: note: in instantiation of function template specialization 'begin_test<int>' requested here
    exit(run_vector_unit_test<int>("begin()", begin_test, begin_test));
                                                          ^
1 error generated.
rators.cpp:32:17: error: indirection requires pointer operand ('int' invalid)
    v.push_back(*(--it));
                ^~~~~~~
2 errors generated.
d::__1::__wrap_iter<int *>]
        template <class T> struct is_integral : public integral_constant<T, false> {};
                                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../vector_tests/../../../Vector.hpp:63:26: note: in instantiation of template class 'ft::is_integral<std::__1::__wrap_iter<int *> >' requested here
                                        typename enable_if<!is_integral<InputIterator>::value>::type last, 
                                                            ^
../vector_tests/constructor(std iterators).cpp:26:15: note: while substituting deduced template arguments into function template 'vector' [with InputIterator = std::__1::__wrap_iter<int *>]
        _vector<int> tmp2(tmp.begin(), tmp.end());
                     ^
../vector_tests/constructor(std iterators).cpp:26:15: error: no matching constructor for initialization of 'ft::vector<int>'
        _vector<int> tmp2(tmp.begin(), tmp.end());
                     ^    ~~~~~~~~~~~~~~~~~~~~~~
../vector_tests/../../../Vector.hpp:48:12: note: candidate constructor not viable: no known conversion from 'std::__1::vector<int, std::__1::allocator<int> >::iterator' (aka '__wrap_iter<int *>') to 'ft::vector<int, std::__1::allocator<int> >::size_type' (aka 'unsigned long') for 1st argument
                explicit vector (size_type n, const value_type& val = value_type(), 
                         ^
../vector_tests/../../../Vector.hpp:62:4: note: candidate template ignored: substitution failure [with InputIterator = std::__1::__wrap_iter<int *>]
                        vector (InputIterator first, 
                        ^
../vector_tests/../../../Vector.hpp:40:12: note: candidate constructor not viable: allows at most single argument 'alloc', but 2 arguments were provided
                explicit vector (const allocator_type& alloc = allocator_type()) : 
                         ^
../vector_tests/../../../Vector.hpp:76:3: note: candidate constructor not viable: requires single argument 'other', but 2 arguments were provided
                vector (const vector& other)
                ^
2 errors generated.
